doc/v2.0/_sources/reference/generated/ak.std.rst.txt
ak.std
------

.. py:module: ak.std

Defined in `awkward.operations.ak_std <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_std.py>`__ on `line 12 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_std.py#L12>`__.

.. py:function:: ak.std(x, weight=None, ddof=0, axis=None, *, keepdims=False, mask_identity=False, flatten_records=unset)


    :param x: The data on which to compute the standard deviation (anything :py:obj:`ak.to_layout` recognizes).
    :param weight: Data that can be broadcasted to ``x`` to give each value a
               weight. Weighting values equally is the same as no weights;
               weighting some values higher increases the significance of those
               values. Weights can be zero or negative.
    :param ddof: "delta degrees of freedom": the divisor used in the
             calculation is ``sum(weights) - ddof``. Use this for "reduced
             standard deviation."
    :type ddof: int
    :param axis: If None, combine all values from the array into
             a single scalar result; if an int, group by that axis: ``0`` is the
             outermost, ``1`` is the first level of nested lists, etc., and
             negative ``axis`` counts from the innermost: ``-1`` is the innermost,
             ``-2`` is the next level up, etc.
    :type axis: None or int
    :param keepdims: If False, this function decreases the number of
                 dimensions by 1; if True, the output values are wrapped in a new
                 length-1 dimension so that the result of this operation may be
                 broadcasted with the original array.
    :type keepdims: bool
    :param mask_identity: If True, the application of this function on
                      empty lists results in None (an option type); otherwise, the
                      calculation is followed through with the reducers' identities,
                      usually resulting in floating-point ``nan``.
    :type mask_identity: bool

Computes the standard deviation in each group of elements from ``x``
(many types supported, including all Awkward Arrays and Records). The
grouping is performed the same way as for reducers, though this operation
is not a reducer and has no identity. It is the same as NumPy's
`std <https://docs.scipy.org/doc/numpy/reference/generated/numpy.std.html>`__
if all lists at a given dimension have the same length and no None values,
but it generalizes to cases where they do not.

Passing all arguments to the reducers, the standard deviation is
calculated as

.. code-block:: python


    np.sqrt(ak.var(x, weight))

See :py:obj:`ak.sum` for a complete description of handling nested lists and
missing values (None) in reducers, and :py:obj:`ak.mean` for an example with another
non-reducer.

See also :py:obj:`ak.nanstd`.

